<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_medium"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/bg_favorite_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/spacing_large"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/toggle_favorite"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            tools:src="@drawable/ic_heart_24dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_large"
            android:gravity="start"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <ImageView
            android:id="@+id/delivery_indicator"
            android:layout_width="@dimen/spacing_large"
            android:layout_height="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:importantForAccessibility="no"
            android:src="@drawable/delivery_indicator"
            app:layout_constraintBottom_toBottomOf="@id/delivery_indicator_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/delivery_indicator_label" />

        <TextView
            android:id="@+id/delivery_indicator_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_large"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@id/currently_monitoring_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delivery_indicator"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_goneMarginBottom="@dimen/spacing_large" />

        <TextView
            android:id="@+id/currently_monitoring_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/currently_monitoring"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/start_monitor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_indicator_label" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/start_monitor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currently_monitoring_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>